# wayland_mouse_left_clicker

./: README.md  pyproject.toml
src/left_click_macro/: __init__.py
